--- a/QuanLyTour/Views/Shared/_Layout.cshtml
+++ b/QuanLyTour/Views/Shared/_Layout.cshtml
@@ -141,7 +141,11 @@
                 </li><!-- end item-1 -->
             </ul>
         </div><!-- end slider -->
-        @RenderBody();
+        @RenderBody()
+
+        <script src="~/lib/jquery/jquery.min.js"></script>
+        <script src="~/lib/owlcarousel/owl.carousel.min.js"></script>
+        @RenderSection("Scripts", required: false)
 
 
         <!--======================= FOOTER =======================-->
