--- a/QuanLyTour/Views/Shared/_LayoutAdmin.cshtml
+++ b/QuanLyTour/Views/Shared/_LayoutAdmin.cshtml
@@ -115,6 +115,12 @@
                                 <span>Quản lý khách sạn</span>
                             </a>
                         </li>
+                        <li class="sub-menu">
+                            <a href="@Url.Action("QuanLyVeMayBayView","Admin")">
+                                <i class="fa fa-plane"></i>
+                                <span>Quản lý vé máy bay</span>
+                            </a>
+                        </li>
 
                         <li class="sub-menu">
                             <a href="@Url.Action("QuanLyNguoiDung","Admin")">
