--- a/QuanLyTour/Views/VeMayBay/Index.cshtml
+++ b/QuanLyTour/Views/VeMayBay/Index.cshtml
@@ -28,7 +28,7 @@
                                     </div>
                                 </div>
 
-                                <!-- Ô chọn ngày -->
+                                <!-- Ô chọn ngày t-->
                                 <div class="col-xs-12 col-md-3" style="padding-right: 5px; padding-left: 5px; margin-bottom: 10px;">
                                     <div class="input-group">
                                         <span class="input-group-addon" style="background-color: white; border-right: none;"><i class="fa fa-calendar"></i></span>
