--- a/QuanLyTour/Views/Tour/DanhMucTour.cshtml
+++ b/QuanLyTour/Views/Tour/DanhMucTour.cshtml
@@ -121,7 +121,7 @@
                                 }
                             </div>
 
-                            <!-- Phân Trang Tour Nước Ngoài -->
+                            <!-- Phân Trang Tour Nước Ngoài t -->
                             <div class="text-center">
                                 @Html.PagedListPager(Model.TourNuocNgoai, page => Url.Action("DanhMucTour", new { pageNuocNgoai = page }))
                             </div>
