--- a/QuanLyTour/Views/KhachSan/Index.cshtml
+++ b/QuanLyTour/Views/KhachSan/Index.cshtml
@@ -22,7 +22,7 @@
                                 <div class="col-xs-12 col-md-4" style="padding-right: 5px; margin-bottom: 10px;">
                                     <div class="input-group">
                                         <span class="input-group-addon" style="background-color: white; border-right: none;"><i class="fa fa-map-marker"></i></span>
-                                        <input type="text" name="keyword" class="form-control input-lg" placeholder="Bạn muốn tìm khách sạn?" style="height: 46px; border-left: none;" required>
+                                        <input type="text" name="keyword" class="form-control input-lg" placeholder="Bạn muốn đến đâu ?" style="height: 46px; border-left: none;" required>
                                     </div>
                                 </div>
 
